k8s/prod/config/email-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email
  labels:
    app: email
spec:
  replicas: 2
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
    spec:
      containers:
        - name: email
          image: wesleymime/email
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  type: LoadBalancer
  selector:
    app: email
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
