k8s/prod/config/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  labels:
    app: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: wesleymime/eureka
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 500Mi
          ports:
            - containerPort: 8761

---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  type: LoadBalancer
  selector:
    app: eureka
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
