k8s/prod/config/fraud-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud
  labels:
    app: fraud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fraud
  template:
    metadata:
      labels:
        app: fraud
    spec:
      containers:
        - name: fraud
          image: wesleymime/fraud
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 500Mi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-service
spec:
  type: LoadBalancer
  selector:
    app: fraud
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
