k8s/prod/config/fta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fta
  labels:
    app: fta
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fta
  template:
    metadata:
      labels:
        app: fta
    spec:
      containers:
        - name: fta
          image: wesleymime/fta
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 1Gi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fta-service
spec:
  selector:
    app: fta
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
