k8s/prod/config/transactions-g-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-generator
  labels:
    app: transactions-generator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transactions-generator
  template:
    metadata:
      labels:
        app: transactions-generator
    spec:
      containers:
        - name: transactions-generator
          image: wesleymime/generator
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: transactions-generator-service
spec:
  type: LoadBalancer
  selector:
    app: transactions-generator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
