k8s/prod/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
  name: fta
spec:
  rules:
    - host: fta.marujo.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fta-service
                port:
                  number: 8080
